[gd_scene load_steps=10 format=3 uid="uid://doegwdd83n18g"]

[ext_resource type="Script" path="res://scenes/misc/platforms/all_purpose_platform.gd" id="1_oldfg"]
[ext_resource type="Texture2D" uid="uid://dhtbqu1trn3d0" path="res://icon.svg" id="2_sy3sc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njg1o"]
size = Vector2(642, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e6yw7"]
size = Vector2(642, 39.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1lyfw"]
size = Vector2(641, 39)

[sub_resource type="Animation" id="Animation_urfrs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area_oneway/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area_fall/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tw0jp"]
resource_name = "shake"
length = 0.9
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.0872665, 0.0872665, -0.0872665, 0.0872665, -0.0872665, 0.0872665, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.85),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 0.9),
"transitions": PackedFloat32Array(1, 1.23114),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area_oneway/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.85),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area_fall/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.85),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_f887i"]
resource_name = "small_shake"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.1001, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0174533, 0.015514, -0.0174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n3lte"]
_data = {
"RESET": SubResource("Animation_urfrs"),
"shake": SubResource("Animation_tw0jp"),
"small_shake": SubResource("Animation_f887i")
}

[node name="platform" type="Node2D"]
script = ExtResource("1_oldfg")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(5, 0.3)
texture = ExtResource("2_sy3sc")

[node name="Area_fall" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_fall"]
position = Vector2(0, -19)
shape = SubResource("RectangleShape2D_njg1o")

[node name="Area_oneway" type="Area2D" parent="."]
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_oneway"]
position = Vector2(0, -19)
shape = SubResource("RectangleShape2D_e6yw7")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_1lyfw")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="ShakeTimer" type="Timer" parent="."]
one_shot = true

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer_falling" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n3lte")
}

[connection signal="body_entered" from="Area_fall" to="." method="_on_area_fall_body_entered"]
[connection signal="body_entered" from="Area_oneway" to="." method="_on_area_oneway_body_entered"]
[connection signal="body_exited" from="Area_oneway" to="." method="_on_area_oneway_body_exited"]
[connection signal="timeout" from="ShakeTimer" to="." method="_on_shake_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
